- Implemented: OpenZWave, Aeotec ZWave+ USB Controller, Enable/Disable blinking mode (@Schmart, Thanks for the magic codes!)
- Implemented: OpenZWave, Node table, now also displays Manufacturer, Product ID and Product Type
- Implemented: OpenZWave, When including Thermostat Setpoints, the zwave Label will be used as Name by default
- Implemented: RFLink: Displaying firmware version in the hardware setup
- Implemented: RFXCom, Blinds T12 (Confexx)
- Implemented: S0 Meter TCP
- Changed: OpenZWave, Better support for Thermostat Modes
- Changed: Stable ID generation for Philips Hue scenes (you need to delete all scenes and restart the hue hardware or domoticz)
- Changed: Wind Direction graph (now does not display directions when speed was equal to zero)
- Changed: ETH-8020, ignoring return message as it always returns (no more Success message)
- Fixed: Better handling of white listed commands/urls
- Fixed: Database backup is now only possible for admin users
- Fixed: Double checking command rights
- Fixed: Fix Off Delay not handled for Selector switch (#538).
- Fixed: Fix On/Off delays not saved on the selector switch edit form (#532).
- Fixed: KMTronic, did not work in timers/groups/scenes
- Fixed: Wind Speed/Gust graph, Plotbands
- Fixed: Added grid lines to percentage/lux/general graphs

Version 3.4834 (March 2nd 2016)
- Implemented: Blockly, now possible to use expressions in notifications/email/SMS like "My temperature is {{temperaturedevice[1234]}} degrees" (see http://www.domoticz.com/wiki/Events)
- Implemented: Blockly, now possible to send a notification with a user variable/device as subject/body
- Implemented: Chinese language support, big thanks to wxws!!
- Implemented: Custom Templates, now possible to directly call custom template pages (http://127.0.0.1:8080/#/Custom/mypage)
- Implemented: Day display in energy/gas/water/temp report
- Implemented: Dummy Hardware, Option to supply name, sensor is now also directly added to the system